--- a/index.html
+++ b/index.html
@@ -50,38 +50,38 @@
     </header>
     <main>
       <!--Hero image-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="page-hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
       <!--Feature-->
-      <section>
+      <section class="page-feature">
         <h2 hidden>Feature</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="feature-titel">Strategy</h3>
+            <p class="feature-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="feature-titel">Punctuality</h3>
+            <p class="feature-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="feature-titel">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="feature-titel">Technologies</h3>
+            <p class="feature-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -89,8 +89,8 @@
         </ul>
       </section>
       <!--Our teams-->
-      <section>
-        <h2>Our Team</h2>
+      <section class="page-our-teams">
+        <h2 class="page-our-times-title">Our Team</h2>
         <ul>
           <li>
             <img
@@ -98,13 +98,13 @@
               alt="MarkGuerrero"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="times-titel">Mark Guerrero</h3>
+            <p class="times-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/teamcards/Tom.jpg" alt="TomFord" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="times-titel">Tom Ford</h3>
+            <p class="times-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -112,8 +112,8 @@
               alt="CamilaGarcia"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="times-titel">Camila Garcia</h3>
+            <p class="times-text">Marketing</p>
           </li>
           <li>
             <img
@@ -121,8 +121,8 @@
               alt="DanielWilson"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="times-titel">Daniel Wilson</h3>
+            <p class="times-text">UI Designer</p>
           </li>
         </ul>
       </section>
