--- a/index.html
+++ b/index.html
@@ -126,6 +126,62 @@
           </li>
         </ul>
       </section>
+      <!--Our Portfolio-->
+      <section class="page-portfolio">
+        <h2 class="page-portfolio-titel">Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="./images2/bankingapp.jpg" alt="BankingApp" width="360" />
+            <h3 class="portfolio-titel">Banking App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images2/cashlesspayment.jpg"
+              alt="CashlessPayment"
+              width="360"
+            />
+            <h3 class="portfolio-titel">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images2/meditationapp.jpg"
+              alt="MeditationApp"
+              width="360"
+            />
+            <h3 class="portfolio-titel">Meditation App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images2/taxiservice.jpg"
+              alt="TaxiService"
+              width="360"
+            />
+            <h3 class="portfolio-titel">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images2/screenillustrations.jpg"
+              alt="ScreenIllustrations"
+              width="360"
+            />
+            <h3 class="portfolio-titel">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images2/onlinecourses.jpg"
+              alt="OnlineCourses"
+              width="360"
+            />
+            <h3 class="portfolio-titel">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="page-footer">
       <a class="logo footer-logo" href="./index.html"
