--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </li>
           <li>
             <h3 class="feature-titel">Diligence</h3>
-            <p>
+            <p class="feature-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
@@ -92,7 +92,7 @@
       <section class="page-our-teams">
         <h2 class="page-our-times-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="our-teams-item">
             <img
               src="./images/teamcards/Mark.jpg"
               alt="MarkGuerrero"
@@ -101,12 +101,12 @@
             <h3 class="times-titel">Mark Guerrero</h3>
             <p class="times-text">Product Designer</p>
           </li>
-          <li>
+          <li class="our-teams-item">
             <img src="./images/teamcards/Tom.jpg" alt="TomFord" width="264" />
             <h3 class="times-titel">Tom Ford</h3>
             <p class="times-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="our-teams-item">
             <img
               src="./images/teamcards/Camila.jpg"
               alt="CamilaGarcia"
@@ -115,7 +115,7 @@
             <h3 class="times-titel">Camila Garcia</h3>
             <p class="times-text">Marketing</p>
           </li>
-          <li>
+          <li class="our-teams-item">
             <img
               src="./images/teamcards/Daniel.jpg"
               alt="DanielWilson"
