--- a/index.html
+++ b/index.html
@@ -52,7 +52,14 @@
       <!--Hero image-->
       <section class="page-hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <button
+          type="button"
+          class="hero-button"
+          class="button-link"
+          href="./index.html"
+        >
+          Order Service
+        </button>
       </section>
       <!--Feature-->
       <section class="page-feature">
